[package]
name = "maestrodejuegos"
version = "0.0.1"
edition = "2021"
description = "Muestra todos los logros que faltan en un perfil de Steam"
repository = "https://github.com/saphyel/maestrodejuegos"
license = "OSL-3.0"

[dependencies]
async-trait = "0.1"
axum = "0.6"
clap = { version = "4.3", features = ["derive"] }
reqwest = { version = "0.11", features = ["gzip", "json"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.29", features = ["full"] }

[dev-dependencies]
cargo-audit = "0.17.6"
